--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mundipagg/mundiapi",
+    "name": "climba-commerce/mundiapi",
     "type": "library",
     "description": "Mundipagg API",
     "keywords": ["MundiAPI","API","SDK"],
